RESOLVED FIXED159381
[JSC] RegExp.compile is not returning the regexp when it succeed
https://bugs.webkit.org/show_bug.cgi?id=159381
Summary [JSC] RegExp.compile is not returning the regexp when it succeed
Benjamin Poulain
Reported 2016-07-01 18:46:31 PDT
[JSC] RegExp.compile is not returning the regexp when it succeed
Attachments
Patch (4.00 KB, patch)
2016-07-01 18:46 PDT, Benjamin Poulain
no flags
Patch (4.15 KB, patch)
2016-07-01 18:50 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-07-01 18:46:45 PDT
Benjamin Poulain
Comment 2 2016-07-01 18:50:16 PDT
Mark Lam
Comment 3 2016-07-01 18:51:01 PDT
Comment on attachment 282629 [details] Patch lol. r=me
WebKit Commit Bot
Comment 4 2016-07-01 19:21:06 PDT
Comment on attachment 282629 [details] Patch Clearing flags on attachment: 282629 Committed r202770: <http://trac.webkit.org/changeset/202770>
WebKit Commit Bot
Comment 5 2016-07-01 19:21:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.