[JSC] RegExp.compile is not returning the regexp when it succeed https://bugs.webkit.org/show_bug.cgi?id=159381

Patch by Benjamin Poulain <bpoulain@apple.com> on 2016-07-01
Reviewed by Mark Lam.

Source/JavaScriptCore:

Spec:
-https://tc39.github.io/ecma262/#sec-regexp.prototype.compile
-https://tc39.github.io/ecma262/#sec-regexpinitialize

* runtime/RegExpPrototype.cpp:
(JSC::regExpProtoFuncCompile):

LayoutTests:

* js/regexp-compile-expected.txt:
* js/script-tests/regexp-compile.js:

Canonical link: https://commits.webkit.org/177501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202770 268f45cc-cd09-0410-ab3c-d52691b4dbfc